fix(collapse): update focus style to align with halo design

--- a/packages/elemental-theme/src/custom-elements/ef-collapse.less
+++ b/packages/elemental-theme/src/custom-elements/ef-collapse.less
@@ -24,6 +24,7 @@
     padding: 0;
     &[focused='visible'] {
       background-color: @button-hover-background-color;
+      outline: 1px solid @button-hover-border-color;
     }
   }
 
