--- a/packages/halo-theme/src/custom-elements/ef-collapse.less
+++ b/packages/halo-theme/src/custom-elements/ef-collapse.less
@@ -45,13 +45,5 @@
         background-color: darken(@header-level2-bg-color, @light-modifier);
       }
     }
-
-    // header level 3
-    &[level='4'] {
-      background-color: lighten(@header-level4-bg-color, @dark-modifier);
-      & when (@variant = light) {
-        background-color: darken(@header-level4-bg-color, @light-modifier);
-      }
-    }
   }
 }
